c3/develop_node
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/develop_node/src/proof.c:1249:14: error: expected expression
*( ( _OWORD *)v11 + 2) = *( _OWORD *)&v22[v7].from; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/develop_node/src/proof.c:1249:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v11 + 2) = *( _OWORD *)&v22[v7].from; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/develop_node/src/proof.c:1249:37: error: expected expression
*( ( _OWORD *)v11 + 2) = *( _OWORD *)&v22[v7].from; 
                                    ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/develop_node/src/proof.c:1249:29: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v11 + 2) = *( _OWORD *)&v22[v7].from; 
                            ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/develop_node/src/obj/proof.o] Error 1
